# openocd_display

./: .gitignore  CMakeLists.txt  README.md  hello_test.cpp
src/: config_file.cpp  config_file.h  control_wight.cpp  control_wight.h  control_wight.ui  main.cpp  new_wight.cpp  new_wight.h  new_wight.ui  ui_control_wight.h  ui_new_wight.h
